--- a/comment-app-frontend-master/package.json
+++ b/comment-app-frontend-master/package.json
@@ -3,13 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@editorjs/editorjs": "^2.19.0",
+    "@editorjs/header": "^2.6.0",
+    "@editorjs/image": "^2.6.0",
+    "@editorjs/list": "^1.6.0",
+    "@editorjs/paragraph": "^2.8.0",
+    "@editorjs/underline": "^1.0.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
-    "bootstrap": "^4.5.2",
+    "bootstrap": "^4.5.3",
+    "editorjs-github-gist-plugin": "^1.1.0",
+    "editorjs-header-with-anchor": "^2.6.0",
+    "editorjs-inline": "^3.0.1",
+    "editorjs-paragraph-with-alignment": "^1.1.0",
+    "editorjs-social-post-plugin": "^1.0.0",
+    "editorjs-style": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
@@ -38,5 +50,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@editorjs/attaches": "^1.0.1",
+    "@editorjs/embed": "^2.4.0",
+    "@editorjs/link": "^2.3.1",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/simple-image": "^1.4.0",
+    "@editorjs/table": "^1.3.0",
+    "editorjs-drag-drop": "^0.1.1",
+    "editorjs-inline-image": "^0.1.1",
+    "editorjs-undo": "^0.1.4"
   }
 }
